fix: aligned footer items center

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -27,12 +27,12 @@ body {
     height: 4rem;
     width: 4rem;
 }
-.navbar-toggler-icon {
+/*.navbar-toggler-icon {
     background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30 30'%3e%3cpath stroke='rgba%2817, 237, 115, 1%29' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e");
 }
 .nav-link {
     color: #11ED73;
-}
+}*/
 
 /*Carousel*/
 .carousel-inner
@@ -99,9 +99,11 @@ body {
 
 /*Footer*/
 .f-item {
-    padding: 0.8rem;
+    height: 100%;
+    margin-right: -2rem;
     background-color: black;
     color: #11ED73;
+    padding-right: -2rem;
 }
 .f-item
 #logo {
